
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/main_text_color"
            android:text="@string/sports_recode"/>

        <RelativeLayout
            android:background="@drawable/ic_small_blue_rectangular"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:text="@string/sports_recode_distance"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movement_total_km_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/sports_kilometre"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movement_total_km_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />


                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_small_blue_rectangular"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:text="@string/sports_step_tody"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movement_total_steps_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/sports_step"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movement_total_steps_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/line_chart_ll"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="#48D1CC"
            android:layout_marginBottom="20dp"
            >
            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <Button
                android:id="@+id/btn_attention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_green_btn"
                android:padding="10dp"
                android:text="添加关注"
                android:textColor="@color/white"
                android:textSize="@dimen/text_main"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

        <ImageView
            android:visibility="gone"
            android:id="@+id/share_bitmap_im"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rankb"/>
    </LinearLayout>
</ScrollView>
